feat: optimizacion de endpoints
