# application/src/main/java/com/centimo/api/ports/driving/InstantaneaDrivingPort.java
@@ -11,7 +11,7 @@ public interface InstantaneaDrivingPort {
 
     Optional<InstantaneaMensual> obtenerPorFecha(String accountId, Integer year, Integer month);
 
-    List<InstantaneaMensual> listarTodas();
+    List<InstantaneaMensual> listarTodas(Integer year, String accountId);
 
     @Transactional
     InstantaneaMensual crear(InstantaneaMensual nuevaInstantanea);
@@ -23,4 +23,7 @@ public interface InstantaneaDrivingPort {
 
     @Transactional
     Optional<InstantaneaMensual> actualizar(String id, InstantaneaMensual cambios);
+
+    @Transactional
+    boolean eliminar(String id);
 }
